WIP2 fix back button location on small screens

--- a/www/css/selectedRoute.css
+++ b/www/css/selectedRoute.css
@@ -340,4 +340,11 @@
   .flight-extras {
     flex-direction: column;
   }
+
+  .back-button {
+    position: relative;
+    top: auto;
+    left: auto;
+    margin-bottom: 20px;
+  }
 }
